ルート見学 リスト完成！！！

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Memorial_App</string>
+    <string name="description1">background</string>
+    <string name="description2">picture</string>
 </resources>
