--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,22 @@
 
     <!-- メモリーフロート -->
     <string name="memory_float">Memory float</string>
+    <string name="memory_float_post_caption">"*" is Mandatory field</string>
+    <string name="memory_post">Memory Post</string>
+    <string name="post">Post</string>
+
+    <string name="poster_information">Poster information</string>
+    <string name="nickname">*Nickname</string>
+    <string name="age">Age</string>
+    <string name="job">Job</string>
+    <string name="past_address">Past address</string>
+    <string name="current_address">Current address</string>
+
+    <string name="memory_information">Memory information</string>
+    <string name="memory">*Memory</string>
+    <string name="time_series">*Time series</string>
+    <string name="picture">Picture</string>
+    <string name="emotion">*Emotion</string>
 
     <!-- 設定 -->
     <string name="close">Close</string>
