--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,10 @@
 
     <!-- メモリーフロート -->
     <string name="memory_float">Memory float</string>
-    <string name="memory_float_post_caption">"*" is Mandatory field</string>
+    <string name="memory_float_post_caption">"*" is Mandatory field.</string>
     <string name="memory_post">Memory Post</string>
     <string name="post">Post</string>
+    <string name="confirmation">Confirmation</string>
 
     <string name="poster_information">Poster information</string>
     <string name="nickname">*Nickname</string>
@@ -52,8 +53,11 @@
     <string name="memory_information">Memory information</string>
     <string name="memory">*Memory</string>
     <string name="time_series">*Time series</string>
-    <string name="picture">Picture</string>
     <string name="emotion">*Emotion</string>
+    <string name="picture">Picture</string>
+
+    <string name="check_message">Please check your entries.</string>
+    <string name="not_entered">Not entered</string>
 
     <!-- 設定 -->
     <string name="close">Close</string>
